# job-app-bot

./: .env.example  .gitignore  README.md  actions.py  config.py  main.py  pyproject.toml
utils/: html_elements.py
