[project]
name = "use-browse"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "browser-use>=0.1.26",
    "gradio==3.28.3",
    "langchain-openai>=0.3.1",
    "pypdf2>=3.0.1",
    "python-dotenv>=1.0.1",
    "rich>=13.9.4",
]
